--- a/packages.config
+++ b/packages.config
@@ -11,7 +11,10 @@
   <package id="ManagedEsent" version="1.9.2.0" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net46" userInstalled="true" />
-  <package id="mongocsharpdriver" version="1.10.0" targetFramework="net46" userInstalled="true" />
+  <package id="mongocsharpdriver" version="2.0.0" targetFramework="net46" userInstalled="true" />
+  <package id="MongoDB.Bson" version="2.0.0" targetFramework="net46" userInstalled="true" />
+  <package id="MongoDB.Driver" version="2.0.0" targetFramework="net46" userInstalled="true" />
+  <package id="MongoDB.Driver.Core" version="2.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" userInstalled="true" />
   <package id="Ninject" version="3.2.2" targetFramework="net46" userInstalled="true" />
   <package id="NUnit" version="2.6.4" targetFramework="net46" userInstalled="true" />
