--- a/packages.config
+++ b/packages.config
@@ -8,8 +8,13 @@
   <package id="DotNetZip" version="1.9.3" targetFramework="net453" userInstalled="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" userInstalled="true" />
   <package id="FluentAssertions" version="3.3.0" targetFramework="net46" userInstalled="true" />
+  <package id="HangFire" version="1.4.2" targetFramework="net46" userInstalled="true" />
+  <package id="HangFire.Core" version="1.4.2" targetFramework="net46" userInstalled="true" />
+  <package id="HangFire.SqlServer" version="1.4.2" targetFramework="net46" userInstalled="true" />
   <package id="ManagedEsent" version="1.9.2.0" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Owin" version="3.0.0" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net46" userInstalled="true" />
   <package id="mongocsharpdriver" version="2.0.0" targetFramework="net46" userInstalled="true" />
   <package id="MongoDB.Bson" version="2.0.0" targetFramework="net46" userInstalled="true" />
@@ -18,6 +23,7 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net46" userInstalled="true" />
   <package id="Ninject" version="3.2.2" targetFramework="net46" userInstalled="true" />
   <package id="NUnit" version="2.6.4" targetFramework="net46" userInstalled="true" />
+  <package id="Owin" version="1.0" targetFramework="net46" userInstalled="true" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net46" userInstalled="true" />
