--- a/packages.config
+++ b/packages.config
@@ -7,12 +7,31 @@
   <package id="CsQuery" version="1.3.4" targetFramework="net46" userInstalled="true" />
   <package id="DotNetZip" version="1.9.3" targetFramework="net453" userInstalled="true" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" userInstalled="true" />
+  <package id="EntityFramework.Commands" version="7.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="EntityFramework.Core" version="7.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="EntityFramework.Relational" version="7.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="EntityFramework.Relational.Design" version="7.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="EntityFramework.SqlServer" version="7.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="EntityFramework.SqlServer.Design" version="7.0.0-beta4" targetFramework="net46" userInstalled="true" />
   <package id="FluentAssertions" version="3.3.0" targetFramework="net46" userInstalled="true" />
   <package id="HangFire" version="1.4.2" targetFramework="net46" userInstalled="true" />
   <package id="HangFire.Core" version="1.4.2" targetFramework="net46" userInstalled="true" />
   <package id="HangFire.SqlServer" version="1.4.2" targetFramework="net46" userInstalled="true" />
+  <package id="Ix-Async" version="1.2.3" targetFramework="net46" userInstalled="true" />
   <package id="ManagedEsent" version="1.9.2.0" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0-rc2" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.CodeAnalysis.Common" version="1.0.0-rc2" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0-rc2" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.Database.Collections.Generic" version="1.9.2.0" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.Caching.Interfaces" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.Caching.Memory" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.ConfigurationModel" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.ConfigurationModel.Interfaces" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.DependencyInjection" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.DependencyInjection.Interfaces" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.Logging" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.Logging.Interfaces" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
+  <package id="Microsoft.Framework.OptionsModel" version="1.0.0-beta4" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.Owin" version="3.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net46" userInstalled="true" />
@@ -24,11 +43,14 @@
   <package id="Ninject" version="3.2.2" targetFramework="net46" userInstalled="true" />
   <package id="NUnit" version="2.6.4" targetFramework="net46" userInstalled="true" />
   <package id="Owin" version="1.0" targetFramework="net46" userInstalled="true" />
+  <package id="Remotion.Linq" version="2.0.0-alpha-002" targetFramework="net46" userInstalled="true" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net46" userInstalled="true" />
+  <package id="System.Collections.Immutable" version="1.1.33-beta" targetFramework="net46" userInstalled="true" />
+  <package id="System.Reflection.Metadata" version="1.0.18-beta" targetFramework="net46" userInstalled="true" />
   <package id="TaskParallelLibrary" version="1.0.2856" targetFramework="net46" userInstalled="true" />
   <package id="VirtualPath" version="0.3.0" targetFramework="net453" userInstalled="true" />
   <package id="WolframAPI" version="1.2" targetFramework="net451" userInstalled="true" />
