--- a/Librainian 2015.csproj
+++ b/Librainian 2015.csproj
@@ -314,6 +314,13 @@
     <Compile Include="Extensions\AssemblyInformation.cs" />
     <Compile Include="Extensions\CopyProgressRoutine.cs" />
     <Compile Include="Extensions\SafeSearchHandle.cs" />
+    <Compile Include="Financial\Bank.cs" />
+    <Compile Include="Financial\BankAccount.cs" />
+    <Compile Include="Financial\CheckingAccount.cs" />
+    <Compile Include="Financial\Customer.cs" />
+    <Compile Include="Financial\Cashier.cs" />
+    <Compile Include="Financial\IBankAccount.cs" />
+    <Compile Include="Financial\SavingsAccount.cs" />
     <Compile Include="Gaming\FlippedCoin.cs" />
     <Compile Include="Internet\Browser\AwesomiumWrapper.cs" />
     <Compile Include="Internet\TraceExtensions.cs" />
@@ -815,7 +822,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Financial\" />
     <Folder Include="Gaming\Directional\" />
     <Folder Include="Graphics\Line\" />
     <Folder Include="PatternRecognition\" />
