--- a/Librainian 2015.csproj
+++ b/Librainian 2015.csproj
@@ -287,7 +287,9 @@
     <Compile Include="Financial\IBankAccount.cs" />
     <Compile Include="Financial\ICustomer.cs" />
     <Compile Include="Financial\IPerson.cs" />
+    <Compile Include="Financial\Ledger.cs" />
     <Compile Include="Financial\SavingsAccount.cs" />
+    <Compile Include="Financial\Wallet.cs" />
     <Compile Include="Gaming\FlippedCoin.cs" />
     <Compile Include="Internet\Browser\AwesomiumWrapper.cs" />
     <Compile Include="Internet\TraceExtensions.cs" />
@@ -662,7 +664,6 @@
     <Compile Include="Measurement\Currency\USD\IWallet.cs" />
     <Compile Include="Measurement\Currency\USD\Money.cs" />
     <Compile Include="Measurement\Currency\USD\TransactionMessage.cs" />
-    <Compile Include="Measurement\Currency\USD\Wallet.cs" />
     <Compile Include="Measurement\Frequency\BPM.cs" />
     <Compile Include="Measurement\Frequency\Hertz.cs" />
     <Compile Include="Measurement\Length\Centimeters.cs" />
