--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="AForge" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="AForge.Math" version="2.2.5" targetFramework="net46" userInstalled="true" />
+  <package id="akavache" version="4.1.1" targetFramework="net46" userInstalled="true" />
+  <package id="akavache.core" version="4.1.1" targetFramework="net46" userInstalled="true" />
+  <package id="akavache.sqlite3" version="4.1.1" targetFramework="net46" userInstalled="true" />
   <package id="BigRationalLibrary" version="1.0.0.0" targetFramework="net46" userInstalled="true" />
   <package id="Clojure" version="1.6.0.1" targetFramework="net46" userInstalled="true" />
   <package id="CsQuery" version="1.3.4" targetFramework="net46" userInstalled="true" />
@@ -49,6 +52,9 @@
   <package id="Rx-Linq" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="Rx-Main" version="2.2.5" targetFramework="net46" userInstalled="true" />
   <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net46" userInstalled="true" />
+  <package id="Rx-Xaml" version="2.2.5" targetFramework="net46" userInstalled="true" />
+  <package id="Splat" version="1.3.3" targetFramework="net46" userInstalled="true" />
+  <package id="SQLitePCL.raw_basic" version="0.7.0" targetFramework="net46" userInstalled="true" />
   <package id="System.Collections.Immutable" version="1.1.33-beta" targetFramework="net46" userInstalled="true" />
   <package id="System.Reflection.Metadata" version="1.0.18-beta" targetFramework="net46" userInstalled="true" />
   <package id="TaskParallelLibrary" version="1.0.2856" targetFramework="net46" userInstalled="true" />
